# vels-claude-light

./: .env.example  .gitignore  README.md  install.sh  pyproject.toml  requirements.txt  uninstall.sh
docs/superpowers/plans/: 2026-04-21-installer.md
docs/superpowers/specs/: 2026-04-21-installer-design.md
scripts/: vels-claude-light.service
src/: __init__.py  bot.py  bridge.py  formatter.py  main.py  storage.py  streaming.py  uploads.py
tests/: conftest.py  installer_test.sh  test_bridge_parser.py  test_formatter.py  test_storage.py
