[project]
name = "vels-claude-light"
version = "0.1.0"
description = "Minimal Telegram bot bridging to Claude Code CLI"
requires-python = ">=3.10"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
